--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/juegodados
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Estas lineas generan automaticamente las tablas y las columnas
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.hbm2ddl.auto=updatedup
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
+
+#config mongodb
+spring.data.mongodb.database=juegoDados
+spring.data.mongodb.port=27017
